<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="nl.medify.doctoruser.feature_home.presentation.HomeFragment">

        <include
            android:id="@+id/view"
            layout="@layout/bottom_rounded_cornered_shape" />

        <ImageView
            android:id="@+id/btnLogout"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/profile_image_txt"
            android:src="@drawable/logout_circle"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/airbnbcereal_bold"
            android:text="@string/welcome_txt"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvSubtitleToday"
            style="@style/bold_label_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/incoming_appointments"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <include
            android:id="@+id/activitySection"
            layout="@layout/empty_activities_today"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubtitleToday" />

        <TextView
            android:id="@+id/btnAllAppointments"
            style="@style/clickable_text_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:drawablePadding="8dp"
            android:text="@string/show_treatments_day_txt"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/arrow_for_textbutton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvIncomingAppointments"
            tools:ignore="TextContrastCheck" />


        <TextView
            android:id="@+id/tvSubtitleActions"
            style="@style/bold_label_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/actions_txt"
            app:layout_constraintTop_toBottomOf="@+id/btnAllAppointments"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnPatientList"
            style="@style/button_big"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_primary_color"
            android:text="@string/capital_patient_list"
            android:textSize="28sp"
            app:layout_constraintTop_toBottomOf="@id/tvSubtitleActions"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvIncomingAppointments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/btnAllAppointments"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubtitleToday" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>