<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/svScrollDiagnosis"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="nl.medify.doctoruser.feature_diagnosis.presentation.AddDiagnosisFragment">

        <include
            android:id="@+id/header"
            layout="@layout/header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDiagnosisTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/airbnbcereal_bold"
            android:text="@string/diagnosis"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/etDiagnosisTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <EditText
            android:id="@+id/etDiagnosisTitle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/lightBlueAccent"
            android:ems="10"
            android:fontFamily="@font/airbnbcereal_medium"
            android:hint="@string/input_diagnosis_title"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/tvDiagnosisTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDiagnosisTitle"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/tvDiagnosisCause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/airbnbcereal_bold"
            android:text="@string/diagnosis_cause"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/etilDiagnosisInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDiagnosisTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etilDiagnosisInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLength="2000"
            android:maxLines="4"
            app:layout_constraintBottom_toTopOf="@+id/tvDiagnosisCause"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDiagnosisCause">

            <EditText
                android:id="@+id/etDiagnosisCause"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/lightBlueAccent"
                android:ems="10"
                android:fontFamily="@font/airbnbcereal_medium"
                android:gravity="top"
                android:hint="@string/input_diagnosis_cause"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                tools:ignore="SpeakableTextPresentCheck"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="315dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvDiagnosisTreatment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/airbnbcereal_bold"
            android:text="@string/diagnosis_treatment"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etilDiagnosisInput" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etilTreatmentInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLength="2000"
            android:maxLines="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDiagnosisTreatment">

            <EditText
                android:id="@+id/etDiagnosisTreatment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/lightBlueAccent"
                android:ems="10"
                android:fontFamily="@font/airbnbcereal_medium"
                android:gravity="top"
                android:hint="@string/input_diagnosis_treatment"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                tools:ignore="SpeakableTextPresentCheck"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="315dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvDiagnosisAdvice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/airbnbcereal_bold"
            android:text="@string/diagnosis_advice"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etilTreatmentInput" />


        <EditText
            android:id="@+id/etAdvice"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/lightBlueAccent"
            android:ems="10"
            android:fontFamily="@font/airbnbcereal_medium"
            android:hint="@string/input_diagnosis_advice"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDiagnosisAdvice"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <Button
            android:id="@+id/btnSubmit"
            style="@style/button_long"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_primary_color"
            android:drawableEnd="@drawable/continue_arrow_button_long"
            android:text="@string/submit_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAdvice" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>